# GameEngine

./: .gitignore  CMakeLists.txt  README.md
Empty/: EmptyApplication.cpp
Framework/Common/: Allocator.cpp  Allocator.hpp  BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  GraphicsManager.cpp  GraphicsManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  Interface.hpp
Platform/Linux/: CMakeLists.txt  helloengine_opengl.cpp  helloengine_xcb.c
